--- a/AtendimentoWeb/pom.xml
+++ b/AtendimentoWeb/pom.xml
@@ -37,6 +37,11 @@
 	        <version>3.0.1</version>
 	    </dependency>
 	    <dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+	    <dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
 	      <version>3.8.1</version>
@@ -45,7 +50,7 @@
 	    <dependency>
 	        <groupId>org.primefaces</groupId>
 	        <artifactId>primefaces</artifactId>
-	        <version>3.5</version>
+	        <version>5.2</version>
 	    </dependency>
 	    
 	    <dependency>
