--- a/AtendimentoWeb/pom.xml
+++ b/AtendimentoWeb/pom.xml
@@ -112,6 +112,23 @@
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.3</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>jsr311-api</artifactId>
+            <version>1.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>1.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-servlet</artifactId>
+            <version>1.18.1</version>
+        </dependency>
 	</dependencies>
   
 	<repositories>
