--- a/AtendimentoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/AtendimentoWeb/src/main/webapp/WEB-INF/web.xml
@@ -9,17 +9,17 @@
     <param-value>.xhtml</param-value>
   </context-param>
   
-  <servlet>
-    <servlet-name>Jersey REST Service</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-    <init-param>
-        <param-name>com.sun.jersey.config.property.packages</param-name>
-        <param-value>br.com.ericfujii.rest</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Jersey REST Service</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
+<!--   <servlet> -->
+<!--     <servlet-name>Jersey REST Service</servlet-name> -->
+<!--     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class> -->
+<!--     <init-param> -->
+<!--         <param-name>com.sun.jersey.config.property.packages</param-name> -->
+<!--         <param-value>br.com.ericfujii.rest</param-value> -->
+<!--     </init-param> -->
+<!--     <load-on-startup>1</load-on-startup> -->
+<!--   </servlet> -->
+<!--   <servlet-mapping> -->
+<!--     <servlet-name>Jersey REST Service</servlet-name> -->
+<!--     <url-pattern>/rest/*</url-pattern> -->
+<!--   </servlet-mapping> -->
 </web-app>
